<resources>
    <string name="tab">\u0009\u0009\u0009\u0009</string>
    <string name="app_name">GymTracker</string>
    <string name="witaj">Witaj w GymTracker</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Wyloguj</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Trening</string>
    <string name="menu_dziennik">Dziennik Wagi</string>
    <string name="menu_historia">Historia</string>
    <string name="home_second">Home Second</string>
    <string name="menu_cwiczenie">Cwiczenia</string>
    <string name="very_severely_underweight">Bardzo duża niedowaga</string>
    <string name="severely_underweight">Duża niedowaga</string>
    <string name="underweight">Niedowaga</string>
    <string name="normal">W normie</string>
    <string name="overweight">Nadwaga</string>
    <string name="obese_class_i">Otyłość klasy 1</string>
    <string name="obese_class_ii">Otyłość klasy 2</string>
    <string name="obese_class_iii">Otyłość klasy 3</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
